[gd_scene load_steps=5 format=2]

[ext_resource path="res://highscore/fruity-freddy-logo.png" type="Texture" id=1]
[ext_resource path="res://highscore/soft-spot-logo.png" type="Texture" id=2]
[ext_resource path="res://highscore/mode7_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://highscore/HighScoreTable.gd" type="Script" id=4]

[node name="HighScoreTable" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 512.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoftSpotLogo" type="TextureRect" parent="."]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruityFreddyLogo" type="TextureRect" parent="."]
margin_left = 281.764
margin_top = 1.7818
margin_right = 633.764
margin_bottom = 199.782
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AuthorLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 100.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "BY CHRIS BUTLER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyrightLabel" type="Label" parent="."]
margin_left = 48.0
margin_top = 140.0
margin_right = 256.445
margin_bottom = 183.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "(C) COPYRIGHT
1983 SOFTSPOT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreBackground" type="ColorRect" parent="."]
margin_top = 220.0
margin_right = 240.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TableLabel" type="Label" parent="."]
margin_left = 32.0
margin_top = 220.0
margin_right = 208.0
margin_bottom = 183.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "HIGH SCORES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysLabel" type="Label" parent="."]
margin_left = 336.0
margin_top = 220.0
margin_right = 208.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "KEYS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyListLabel" type="Label" parent="."]
margin_left = 304.0
margin_top = 260.0
margin_right = 624.0
margin_bottom = 464.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "  @ = UP
  ? = DOWN
  Z = LEFT
  X = RIGHT

  F = FREEZE
  U = UNFREEZE

Q/S = SOUND OFF/ON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreRank" type="Label" parent="."]
margin_top = 260.0
margin_right = 20.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1
2
3
4
5
6
7
8
9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" type="Label" parent="."]
margin_left = 48.0
margin_top = 260.0
margin_right = 20.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "005000
005000
005000
005000
005000
005000
005000
005000
005000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresNames" type="Label" parent="."]
margin_left = 192.0
margin_top = 260.0
margin_right = 20.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "---
---
---
---
---
---
---
---
---"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSpaceBackground" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 492.0
margin_right = 624.0
margin_bottom = 512.0
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressLabel" type="Label" parent="."]
margin_left = 48.0
margin_top = 492.0
margin_right = 416.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "PRESS             TO  BEGIN  GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceBarLabel" type="Label" parent="."]
margin_left = 160.0
margin_top = 492.0
margin_right = 300.0
margin_bottom = 240.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "SPACE BAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
